previous/prometheus/office-prometheus/monitoring/prometheus/7_prometheus_ingress.yaml
#	vim default-backend-deployment.yaml 
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.brilliant.com.bd
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 80
